# dod-deep-research

./: .env.example  .envrc.example  .gitignore  Dockerfile.pipeline  End_to_End_Specification.md  Makefile  README.md  agent_instructions.md  docker-compose.yml  main.py  mcp.mk  pyproject.toml
.cursor/rules/: instructions.mdc
.gemini/: GEMINI.md
.gemini/commands/: discuss.toml
docs/: architecture.md
dod_deep_research/: __init__.py  agent.py  cli.py  clients.py  core.py  deep_research.py  evals.py  loggy.py  main.py  models.py  schemas.py
dod_deep_research/.adk/: session.db
dod_deep_research/agents/: agent.py  deep_research.py  evidence.py  evidence_store.py  mcp_toolsets.py  parellelize_agents.py  pipeline_factory.py  plugins.py  schemas.py  sequence_agents.py  sequential_agent.py  shared_state.py
dod_deep_research/pipeline/: __init__.py  orchestrator.py
dod_deep_research/prompts/: __init__.py  example_prompt.py  indication_prompt.py  prompt_example.py  prompt_example.txt  registry.py
dod_deep_research/tools/: __init__.py  tooling.py
dod_deep_research/utils/: evidence.py  persistence.py  writer.py
make/: agent.mk  mcp.mk  test_agent.mk
mcp/clinicaltrialsgov-mcp-server/: package.json
mcp/exa-mcp-server/: Dockerfile
tests/: __init__.py  test_agent_mcp_wiring.py  test_collector_agent.py  test_collector_tools_direct.py  test_core.py  test_evidence_item.py  test_long_writer_utils.py  test_orchestrator.py  test_persistence.py  test_planner_agent.py  test_research_head_agent.py  test_writer_agent.py  test_writer_utils.py
tests/agents/: agent.py  (+4 more)
(+85 files in other folders)
